# python_course

./: .gitignore  README.md  introduction.MD  package-lock.json  package.json
module_1/: README.md  excercise.py  main.py  pep8_examples.py
module_1/excercise/: step_1.py  step_2.py  step_3.py
module_1/my_example_package/: example.py
module_2/: README.md  flask_example.py  pydantic_example.py  requirements.txt  user_data.json
module_4/testing_examples/: README.md  calculator.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt  test_calculator_pytest.py  test_calculator_unittest.py  test_integration.py
module_4/virtual_environments/poetry_example/: app_example.py  pyproject.toml
module_4/virtual_environments/uv_example/: README.md  pyproject.toml
project/: .env.sample  Makefile  README.md  alembic.ini  constants.py  diagram.drawio  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
project/alembic/: env.py
project/alembic/versions/: 2025_08_08_10_39_36_creation_of_client_table.py  2025_08_08_10_43_38_adding_client_rfc.py  2025_08_13_09_43_43_adding_product_table.py  2025_08_13_09_52_23_adding_client_name.py  2025_08_13_11_39_10_adding_date_to_table.py
project/data/home_depot/: products_20250807_10_00.json  products_20250808_09_00.json  products_20250808_16_00.json  products_20250813_01_00.json
project/data/liverpool/: products_20250807_11_00.json  products_20250808_01_00.json  products_20250813_09_00.json
project/src/: __init__.py
project/src/api/: crud.py  schemas.py  server.py
project/src/bot/: config.py  echobot.py
project/src/db/: base.py  base_class.py  config.py  session.py  test_connection.py
project/src/etl/: main.py
project/src/models/: clients.py  products.py
project/src/scraper/: __init__.py  base.py  constants.py  crawl4ai_testing.py  home_depot.py  liverpool.py  utils.py
slides/: intro.md  module_1.md  package-lock.json  package.json  slides.md
slidev/: package-lock.json  package.json  slides.md
slidev/components/: CsharpLogo.vue  PythonLogo.vue  RLogo.vue
(+32 files in other folders)
